update to Edit movie function

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
         <br>
         <form>
             <label for="editMovies">Select a Movie to Edit</label>
-            <select name="editMovie" id="editMovies"></select>
+            <select name="editMovie" id="editMovies">
+            </select>
 
             <label for="editRating">Select new Star Rating</label>
             <select id="editRating" name="movieRating">
