Created delete movie form

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,14 @@
             <button id="editSubmit" type="submit">Submit</button>
         </form>
         <br>
+        <form>
+            <label for="deleteMovies">Select a Movie to Delete</label>
+            <select name="deleteMovies" id="deleteMovies">
+            </select>
+            <button id="deleteSubmit" type="submit">Submit</button>
+        </form>
+
+
         <div id="movies">
             <h3>Loading...</h3>
         </div>
