created disable buttons before page loads

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 <option class="star" value="4">Four Star</option>
                 <option class="star" value="5">Five Star</option>
             </select>
-            <button id="submit" type="submit">Submit</button>
+            <button id="submit" type="submit" disabled>Submit</button>
         </form>
         <br>
         <form>
@@ -37,14 +37,14 @@
                 <option class="star" value="4">Four Star</option>
                 <option class="star" value="5">Five Star</option>
             </select>
-            <button id="editSubmit" type="submit">Submit</button>
+            <button id="editSubmit" type="submit" disabled>Submit</button>
         </form>
         <br>
         <form>
             <label for="deleteMovies">Select a Movie to Delete</label>
             <select name="deleteMovies" id="deleteMovies">
             </select>
-            <button id="deleteSubmit" type="submit">Submit</button>
+            <button id="deleteSubmit" type="submit" disabled>Submit</button>
         </form>
 
 
