--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Application</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css" />
+
 </head>
 <body>
     <div class="container">
@@ -19,14 +21,14 @@
                 <option class="star" value="4 ★★★★">4 ★★★★</option>
                 <option class="star" value="5 ★★★★★">5 ★★★★★</option>
             </select>
-            <button id="submit" type="submit" disabled>Submit</button>
+            <button id="submit" class="btn btn1" type="submit" disabled>Submit</button>
         </form>
         <br>
 
         <form>
             <label for="editMovies">Select Movie To Edit</label>
             <select name="editMovie" id="editMovies"></select>
-            <button id="movieDetailSelect" type="submit" disabled>Select</button>
+            <button id="movieDetailSelect" class="btn btn2" type="submit" disabled>Select</button>
             <h3>Selected Movie Details:</h3>
             <div id="movieDetails"></div>
             <br>
@@ -42,7 +44,7 @@
             </select>
             <label for="movieNameEdit">Edit Movie Title</label>
             <input id="movieNameEdit" type="text">
-            <button id="editSubmit" type="submit" disabled>Submit</button>
+            <button id="editSubmit" class="btn btn3" type="submit" disabled>Submit</button>
         </form>
         <br>
 
@@ -50,11 +52,12 @@
             <label for="deleteMovies">Select a Movie to Delete</label>
             <select name="deleteMovies" id="deleteMovies">
             </select>
-            <button id="deleteSubmit" type="submit" disabled>Submit</button>
+            <button id="deleteSubmit" class="btn btn4" type="submit" disabled>Submit</button>
         </form>
 
-        <div id="movies">
-            <h3>Loading...</h3>
+        <div id="movies" class="h-scroll">
+<!--            <h3>Loading...</h3>-->
+            <img id="popcornRunning" src ="pictures/popcornrunning.gif" >
         </div>
     </div>
 
