button colors,background

--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,14 @@
                 <option class="star" value="4 ★★★★">4 ★★★★</option>
                 <option class="star" value="5 ★★★★★">5 ★★★★★</option>
             </select>
-            <button id="submit" class="btn btn1" type="submit" disabled>Submit</button>
+            <button id="submit" class="btn btn3" type="submit" disabled>Submit</button>
         </form>
         <br>
 
         <form>
             <label for="editMovies">Select Movie To Edit</label>
             <select name="editMovie" id="editMovies"></select>
-            <button id="movieDetailSelect" class="btn btn2" type="submit" disabled>Select</button>
+            <button id="movieDetailSelect" class="btn btn3" type="submit" disabled>Select</button>
             <h3>Selected Movie Details:</h3>
             <div id="movieDetails"></div>
             <br>
@@ -57,7 +57,7 @@
 
         <div id="movies" class="h-scroll">
 <!--            <h3>Loading...</h3>-->
-            <img id="popcornRunning" src ="pictures/popcornrunning.gif" >
+            <img id="popcornRunning" src ="pictures/newgif.gif" >
         </div>
     </div>
 
