update walking popcorn

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 
         <div id="movies" class="h-scroll">
 <!--            <h3>Loading...</h3>-->
-            <img id="popcornRunning" src ="pictures/newgif.gif" >
+            <img id="popcornRunning" src ="pictures/pop.gif" >
         </div>
     </div>
 
