--- a/public/index.html
+++ b/public/index.html
@@ -9,32 +9,40 @@
 
 </head>
 <body>
-<h1 id="main-header">THE MOVIE SPOT</h1>
+<!--<h1 id="main-header">THE MOVIE SPOT</h1>-->
+<div class="jumbotron" id="jumbotron">
+    <h1 id="jumbotron-heading">THE MOVIE SPOT</h1>
+    <p>Browse and modify our movie database.</p>
+</div>
     <div class="container">
         <div id="divider1">
+            <h1>Add A Movie</h1>
         <form method="POST">
-            <label for="movieName" class="divider-heading">Enter Movie Title To Add</label>
+            <label for="movieName" class="divider-heading">Enter Movie Title</label><br>
             <input id="movieName" type="text">
             <br>
             <label for="movieRating" class="divider-heading">Enter Rating</label>
             <br>
             <select id="movieRating" name="movieRating">
                 <option class="star">How many stars do you give this movie?</option>
-                <option class="star" value="1 ★">1 ★</option>
-                <option class="star" value="2 ★★">2 ★★</option>
-                <option class="star" value="3 ★★★">3 ★★★</option>
-                <option class="star" value="4 ★★★★">4 ★★★★</option>
-                <option class="star" value="5 ★★★★★">5 ★★★★★</option>
+                <option class="star" value="&#11088;">&#11088;</option>
+                <option class="star" value="&#11088;&#11088;">&#11088;&#11088;</option>
+                <option class="star" value="&#11088;&#11088;&#11088;">&#11088;&#11088;&#11088;</option>
+                <option class="star" value="&#11088;&#11088;&#11088;&#11088;">&#11088;&#11088;&#11088;&#11088;</option>
+                <option class="star" value="&#11088;&#11088;&#11088;&#11088;&#11088;">&#11088;&#11088;&#11088;&#11088;&#11088;</option>
             </select>
+            <br>
+            <br>
             <button id="submit" class="btn btn3" type="submit" disabled>Submit</button>
         </form>
         </div>
         <br>
         <form>
             <div id="divider2">
+                <label for="editMovies" class="divider-heading"><h2>Select Movie for Details</h2></label><br>
+                <img class="dividerPics" src="pictures/reel.gif">
 
-            <label for="editMovies" class="divider-heading">Select Movie for Details</label><br>
-            <select name="editMovie" id="editMovies"></select><br>
+                <select name="editMovie" id="editMovies"></select><br>
             <button id="movieDetailSelect" class="btn btn3" type="submit" data-toggle="modal" data-target="#exampleModalCenter" disabled>Select</button>
             </div>
 
@@ -60,13 +68,13 @@
                                 <br>
 
                                 <label for="editRating">Select New Star Rating</label>
-                                <select id="editRating" name="movieRating">
+                                <select id="editRating" class="form-control form-control-sm"name="movieRating">
                                     <option class="star">How many stars do you give this movie?</option>
-                                    <option class="star" value="1 ★">1 ★</option>
-                                    <option class="star" value="2 ★★">2 ★★</option>
-                                    <option class="star" value="3 ★★★">3 ★★★</option>
-                                    <option class="star" value="4 ★★★★">4 ★★★★</option>
-                                    <option class="star" value="5 ★★★★★">5 ★★★★★</option>
+                                    <option class="star" value="&#11088;">&#11088;</option>
+                                    <option class="star" value="&#11088;&#11088;">&#11088;&#11088;</option>
+                                    <option class="star" value="&#11088;&#11088;&#11088;">&#11088;&#11088;&#11088;</option>
+                                    <option class="star" value="&#11088;&#11088;&#11088;&#11088;">&#11088;&#11088;&#11088;&#11088;</option>
+                                    <option class="star" value="&#11088;&#11088;&#11088;&#11088;&#11088;">&#11088;&#11088;&#11088;&#11088;&#11088;</option>
                                 </select>
                                 <br>
                                 <br>
@@ -77,7 +85,7 @@
                             <div class="modal-footer">
                                 <button type="submit" class="btn btn3" data-dismiss="modal">Close</button>
 <!--                                <button type="button" class="btn btn-primary">Save changes</button>-->
-                                <button  class="btn btn3" type="submit" disabled>Submit Changes</button>
+                                <button  id="editSubmit"class="btn btn3" type="submit" disabled>Submit Changes</button>
 
                             </div>
                         </div>
@@ -87,12 +95,15 @@
         </form>
         <br>
         <div id="divider3">
-        <form>
+            <h1>Delete A Movie</h1>
+        <br><br>
+            <form>
             <label for="deleteMovies" class="divider-heading">Select a Movie to Delete</label>
-            <br>
+            <br><br>
             <select name="deleteMovies" id="deleteMovies">
             </select>
             <br>
+
             <button id="deleteSubmit" class="btn btn4" type="submit" disabled>Submit</button>
         </form>
         </div>
