change border radius on divs

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Application</title>
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css" />
@@ -39,7 +40,7 @@
         <br>
         <form>
             <div id="divider2">
-                <label for="editMovies" class="divider-heading"><h2>Select Movie for Details</h2></label><br>
+                <label for="editMovies" class="divider-headin"><h2>Select Movie for Details</h2></label><br>
                 <img class="dividerPics" src="pictures/reel.gif">
 
                 <select name="editMovie" id="editMovies"></select><br>
@@ -47,12 +48,6 @@
             </div>
 
 
-                <!-- Button trigger modal -->
-<!--                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">-->
-<!--                    Launch demo modal-->
-<!--                </button>-->
-
-                <!-- Modal -->
                 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
@@ -108,11 +103,9 @@
         </form>
         </div>
         <div id="movies" class="h-scroll">
-<!--            <h3>Loading...</h3>-->
             <img id="popcornRunning" src ="pictures/pop.gif" >
         </div>
     </div>
-
 
 
 
