--- a/public/index.html
+++ b/public/index.html
@@ -60,9 +60,9 @@
                             <div class="modal-body">
                                 <h3 class="fancy-header">Selected Movie Details:</h3>
                                 <div id="movieDetails"></div>
-                                <br>
 
-                                <label for="editRating">Select New Star Rating</label>
+
+                                <label for="editRating">Select New Rating</label>
                                 <select id="editRating" class="form-control form-control-sm" name="movieRating">
                                     <option class="star">How many stars do you give this movie?</option>
                                     <option class="star" value="&#11088;">&#11088;</option>
@@ -72,15 +72,14 @@
                                     <option class="star" value="&#11088;&#11088;&#11088;&#11088;&#11088;">&#11088;&#11088;&#11088;&#11088;&#11088;</option>
                                 </select>
                                 <br>
-                                <br>
                                 <label for="movieNameEdit">Edit Movie Title</label>
                                 <input id="movieNameEdit" type="text">
 <!--                                <button id="editSubmit" class="btn btn3" type="submit" disabled>Submit</button>-->
                             </div>
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn3" data-dismiss="modal">Close</button>
+<!--                                <button type="submit" class="btn btn3" data-dismiss="modal">Close</button>-->
 <!--                                <button type="button" class="btn btn-primary">Save changes</button>-->
-                                <button  id="editSubmit" class="btn btn3" type="submit" disabled>Submit Changes</button>
+                                <button  id="editSubmit" class="btn btn3" type="submit" data-dismiss="modal" disabled>Submit Changes</button>
 
                             </div>
                         </div>
@@ -102,10 +101,11 @@
             <button id="deleteSubmit" class="btn btn4" type="submit" disabled>Submit</button>
         </form>
         </div>
-        <div id="movies" class="h-scroll">
+        <br>
+             <div id="movies" class="row h-scroll">
             <img id="popcornRunning" src ="pictures/pop.gif" >
+            </div>
         </div>
-    </div>
 
 
 
