working search bar

--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,7 @@
         </form>
         </div>
         <br>
+        <input class="col-12" type="text" id="searchMovies" placeholder="Search for movies">
              <div id="movies" class="row h-scroll">
             <img id="popcornRunning" src ="pictures/pop.gif" >
             </div>
