--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,8 @@
         </form>
         </div>
         <br>
-        <input class="col-12" type="text" id="searchMovies" placeholder="Search for movies">
+        <br>
+        <input class="col-12 form-control" type="text" id="searchMovies" placeholder="Search for movies">
              <div id="movies" class="row h-scroll">
             <img id="popcornRunning" src ="pictures/pop.gif" >
             </div>
