fixed search bar spacing

--- a/public/index.html
+++ b/public/index.html
@@ -103,12 +103,13 @@
         </div>
         <br>
         <br>
+        <div class="searchDiv">
         <input class="col-12 form-control" type="text" id="searchMovies" placeholder="Search for movies">
+        </div>
              <div id="movies" class="row h-scroll">
             <img id="popcornRunning" src ="pictures/pop.gif" >
             </div>
         </div>
-
 
 
 
